changed preconnects and head logic

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Freestar + Svelte - Implementation</title>
-
+  <link rel="preconnect" href="https://a.pub.network/" crossorigin />
+  <link rel="preconnect" href="https://b.pub.network/" crossorigin />
+  <link rel="preconnect" href="https://c.pub.network/" crossorigin />
+  <link rel="preconnect" href="https://d.pub.network/" crossorigin />
+  <link rel="preconnect" href="https://c.amazon-adsystem.com" crossorigin />
+  <link rel="preconnect" href="https://s.amazon-adsystem.com" crossorigin />
+  <link rel="preconnect" href="https://btloader.com/" crossorigin />
+  <link rel="preconnect" href="https://api.btloader.com/" crossorigin />
+  <link rel="preconnect" href="https://cdn.confiant-integrations.net" crossorigin />
+  <link rel="stylesheet" href="https://a.pub.network/reuters-com/cls.css">
 </head>
 
 <body>
